--- a/transkribus/templates/transkribus/page.html
+++ b/transkribus/templates/transkribus/page.html
@@ -3,6 +3,7 @@
 {% load webpage_extras %}
 {% block title %}Search{% endblock %}
 {% block content %}
+<script src="{{ openseadragon_js }}"></script>
     <div class="container">
         <div class="card">
             <div class="card-header" style="text-align: center">
@@ -13,14 +14,6 @@
                 </h1>
             </div>
             <div class="card body">
-                <p>
-                    <li>
-                        one
-                    </li>
-                    <li>
-                        twoe
-                    </li>
-                </p>
                 <div class="card">
                     <div class="row">
                         <div class="col-6">
@@ -28,10 +21,17 @@
                                 <div class="card-header">
                                     <h2>IMG</h2>
                                 </div>
-                                <div class="card-body">
-                                    <p>
-                                        <img src="{{ result.img_url}}" />
-                                    </p>
+                                <div class="card-body" id="iiif" style="width: 100%; height: 800px">
+                                    <script type="text/javascript">
+                                        var viewer = OpenSeadragon({
+                                            id: "iiif",
+                                            tileSources: {
+                                                type: 'image',
+                                                url: "{{ result.img_url}}"
+                                            },
+                                            prefixUrl: "{{ openseadragon_img }}"
+                                        });
+                                    </script>
                                 </div>
                             </div>
                         </div>
