--- a/transkribus/templates/transkribus/documents.html
+++ b/transkribus/templates/transkribus/documents.html
@@ -15,13 +15,13 @@
                     <thead>
                         <tr>
                             <th>
-                                Title
+                                Titel
                             </th>
                             <th>
-                                Nr. of pages
+                                Anzahl Seiten
                             </th>
                             <th>
-                                Preview
+                                Vorschau
                             </th>
                         </tr>
                     </thead>
