--- a/transkribus/templates/transkribus/page.html
+++ b/transkribus/templates/transkribus/page.html
@@ -8,9 +8,9 @@
         <div class="card">
             <div class="card-header" style="text-align: center">
                 <h1>
-                    <small>collection:</small> {{ result.col_id }}
-                    <small>document:</small> {{ result.doc_id }}
-                    <small>page:</small> {{ result.page_id }}
+                    <small>Collection:</small> {{ result.col_id }}
+                    <small>Dokument:</small> {{ result.doc_id }}
+                    <small>Seite:</small> {{ result.page_id }}
                 </h1>
             </div>
             <div class="card body">
