--- a/transkribus/templates/transkribus/hits.html
+++ b/transkribus/templates/transkribus/hits.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="card">
             <div class="card-header" style="text-align: center">
-                <h1>Fulltext Search</h1>
+                <h1>Volltextsuche</h1>
             </div>
             <div class="card body">
                 <div class="row justify-content-center">
@@ -17,7 +17,7 @@
                             <input type="search" class="form-control form-control-lg" placeholder="Volltextsuche über alle Zeitungen" name="query">
                           </div>
                           <div class="col-12 col-md-3">
-                            <button type="submit" class="btn btn-block btn-lg btn-primary">Go!</button>
+                            <button type="submit" class="btn btn-block btn-lg btn-primary">Los!</button>
                           </div>
                         </div>
                       </form>
@@ -28,11 +28,11 @@
         <div class="card">
             <div class="card-header" style="text-align: center">
                 <h1>
-                    {% if start != '0' %}<a href="{{new_url}}&start={{ prev }}">prev</a>{% endif %}{{ hits }} Results {% if next %}<a href="{{new_url}}&start={{ next }}">next</a>{% endif %}
+                    {% if start != '0' %}<a href="{{new_url}}&start={{ prev }}">zurück</a>{% endif %}{{ hits }} Treffer {% if next %}<a href="{{new_url}}&start={{ next }}">vor</a>{% endif %}
                 </h1>
                 {% if clear_filter %}
                     <h4>
-                        <a href="{{ base_url }}">clear filter</a>
+                        <a href="{{ base_url }}">Filter zurücksetzen</a>
                     </h4>
                 {% endif %}
             </div>
@@ -41,7 +41,7 @@
                     <div class="col-4">
                         <div class="card">
                             <div class="card-header">
-                                <h3>refine your search</h3>
+                                <h3>Filtern</h3>
                             </div>
                             <div class="card-body">
                                 {% for x in trp_result.facets.facet %}
@@ -75,13 +75,13 @@
                                                 Collection: {{ x.collectionIds.collectionId|first}}
                                             </li>
                                             <li>
-                                                Document: {{ x.docTitle }}; ID: {{ x.docId }}
+                                                Dokument: {{ x.docTitle }}; ID: {{ x.docId }}
                                             </li>
                                             <li>
-                                                Page: {{ x.pageNr }}
+                                                Seite: {{ x.pageNr }}
                                             </li>
                                             <li>
-                                                <a href="{% url 'transkribus:trp_page' col_id=x.collectionIds.collectionId|first  doc_id=x.docId page_id=x.pageNr %}">go to document</a>
+                                                <a href="{% url 'transkribus:trp_page' col_id=x.collectionIds.collectionId|first  doc_id=x.docId page_id=x.pageNr %}">ansehen</a>
                                             </li>
                                         </ul>
                                     </div>
