--- a/transkribus/templates/transkribus/hits.html
+++ b/transkribus/templates/transkribus/hits.html
@@ -28,7 +28,7 @@
         <div class="card">
             <div class="card-header" style="text-align: center">
                 <h1>
-                    {% if start != '0' %}<a href="{{new_url}}&start={{ prev }}">zurück</a>{% endif %}{{ hits }} Treffer {% if next %}<a href="{{new_url}}&start={{ next }}">vor</a>{% endif %}
+                    {% if start != '0' %}<a href="{{new_url}}&start={{ prev }}">zurück </a>{% endif %}{{ hits }} Treffer {% if next %}<a href="{{new_url}}&start={{ next }}">vor</a>{% endif %}
                 </h1>
                 {% if clear_filter %}
                     <h4>
@@ -64,7 +64,7 @@
                     <div class="col-8">
                         <div class="card">
                             <div class="card-header">
-                                <h3>KWIC</h3>
+                                <h3>Stelle</h3>
                             </div>
                             <div class="card-body">
                                 {% for x in trp_result.pageHits.PageHit %}
