--- a/transkribus/templates/transkribus/doc_overview.html
+++ b/transkribus/templates/transkribus/doc_overview.html
@@ -21,14 +21,16 @@
                 <h3>{{ doc_md.trp_return.md.nrOfPages }} {{ my_lang.docs.page_plural }}</h3>
                 <h4>{{ collection.description }}</h4>
             </div>
-            <div class="card body">
-                <ul>
+            <div class="row">
+
                     {% for x in doc_md.pages %}
-                        <li>
-                            <a href="{% url 'transkribus:trp_page' col_id=col_id doc_id=doc_id page_id=x.page_nr %}"><img src="{{x.thumb }}" /></a>
-                        </li>
+                    <div class="col-lg-3 col-md-4 col-6">
+                        <a href="{% url 'transkribus:trp_page' col_id=col_id doc_id=doc_id page_id=x.page_nr %}" class="d-block mb-4 h-100">
+                            <img class="img-fluid" src="{{x.thumb }}" title="Seite {{x.page_nr}}">
+                        </a>
+                    </div>
                     {% endfor %}
-                </ul>
+
 
 
             </div>
