--- a/transkribus/templates/transkribus/page.html
+++ b/transkribus/templates/transkribus/page.html
@@ -15,6 +15,8 @@
                 <li class="breadcrumb-item active" aria-current="page">{{ result.page_id }}</li>
             </ol>
         </nav>
+    </div>
+    <div>
         <div class="card">
             <div class="card-header" style="text-align: center">
                 <div class="row">
@@ -60,7 +62,7 @@
             <div class="card body">
                 <div class="card">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-md-6 col-lg-6 col-sm-12 col-12">
                             <div class="card">
                                 <div class="card-header">
                                     <h2>{{ my_lang.page.img_col }}</h2>
@@ -79,7 +81,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-12">
                             <div class="card">
                                 <div class="card-header">
                                     <h2>{{ my_lang.page.text_col }}</h2>
