fix for django > 3.x load staticfiles -> load static

--- a/transkribus/templates/transkribus/doc_overview.html
+++ b/transkribus/templates/transkribus/doc_overview.html
@@ -1,5 +1,5 @@
 {% extends "webpage/base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% load transkribus_extras %}
 {% block title %}
     {{ doc_md.trp_return.md.title }}
