--- a/transkribus/templates/transkribus/page.html
+++ b/transkribus/templates/transkribus/page.html
@@ -1,5 +1,5 @@
 {% extends "webpage/base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% load transkribus_extras %}
 {% block title %}
     {{ result.extra_info.title }} {{ result.page_id }} / {{ result.extra_info.nrOfPages }}
