--- a/transkribus/templates/transkribus/hits.html
+++ b/transkribus/templates/transkribus/hits.html
@@ -1,5 +1,5 @@
 {% extends "webpage/base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% load transkribus_extras %}
 {% block title %}Search{% endblock %}
 {% block content %}
