* added possiblity to restrict access to non logged-in users to Facsimiles by adding TRANSKRIBUS_PUBLIC = False to settings

--- a/transkribus/templates/transkribus/hits.html
+++ b/transkribus/templates/transkribus/hits.html
@@ -64,7 +64,7 @@
                                             <ul class="transkribus_facets-list">
                                                 {% for y in x.facetMap.entry %}
                                                     <li class="transkribus_facet">
-                                                        <a class="transkribus_facet-field" href="{{ base_url }}&filter={{ x.facet_field }}:{{y.key}}">{{ y.key }}</a><span class="transkribus_facet-field-separator">:</span> <span class="transkribus_facet-field-count">{{ y.value }}</span>
+                                                        <a class="transkribus_facet-field" href='{{ base_url }}&filter={{ x.facet_field }}:"{{y.key}}"'>{{ y.key }}</a><span class="transkribus_facet-field-separator">:</span> <span class="transkribus_facet-field-count">{{ y.value }}</span>
                                                     </li>
                                                 {% endfor %}
                                             </ul>
